# project-templates

./: .gitignore  LICENSE
c++/lib/: CMakeLists.txt
c++/lib/src/: CMakeLists.txt  libname.cpp
c++/lib/src/include/libname/: all.hpp
c++/lib/tests/: CMakeLists.txt  gtest-test.cpp
